--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="/src/script.js" defer></script>
 
-    <title>Document</title>
+    <link rel="shortcut icon" href="/public/pic1.jpeg" type="image/x-icon" />
+    <title>Veleno</title>
   </head>
 
   <body>
