--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </section>
 
-    <section class="w-full px-20 max-md:px-0 max-md:mt-[50vh]">
+    <div class="w-full max-md:px-0 max-md:mt-[50vh]">
       <div
         class="flex items-center justify-center w-full text-8xl font-primary pt-11"
       >
@@ -147,12 +147,32 @@
             </div>
           </span>
         </div>
-
-        <div class="absolute right-0 w-full m-0 -rotate-90 bottom-32 grayscale">
-          <img src="/public/signature.png" class="w-48 m-0" />
+        <div class="w-full">
+          <div class="flex items-center justify-center w-full max-md:mt-10">
+            <a
+              class="flex items-center justify-center mr-5"
+              href="https://www.instagram.com/veleno.05/"
+              ><img src="/public/instagram.svg" class="w-10" />
+              <p class="ml-2 text-lg">Instagram</p></a
+            >
+            <a
+              class="flex items-center justify-center mr-5"
+              href="https://www.youtube.com/@veleno.05"
+              ><img src="/public/youtube.svg" class="w-10" />
+              <p class="ml-2 text-lg">YouTube</p></a
+            >
+          </div>
+          <div class="z-50 flex items-center justify-center w-full mb-16">
+            <img
+              src="/public/signature.png"
+              class="w-48 m-0 -rotate-90 grayscale"
+            />
+          </div>
         </div>
       </div>
-    </section>
+
+      <a href=""></a>
+    </div>
 
     <audio controls autoplay loop hidden>
       <source src="public/audio/song.mp3" />
