--- a/index.html
+++ b/index.html
@@ -152,15 +152,17 @@
             <a
               class="flex items-center justify-center mr-5"
               href="https://www.instagram.com/veleno.05/"
-              ><img src="/public/instagram.svg" class="w-10" />
+            >
+              <img src="/public/instagram.svg" class="w-10" />
               <p class="ml-2 text-lg">Instagram</p></a
             >
             <a
               class="flex items-center justify-center mr-5"
               href="https://www.youtube.com/@veleno.05"
-              ><img src="/public/youtube.svg" class="w-10" />
-              <p class="ml-2 text-lg">YouTube</p></a
             >
+              <img src="/public/youtube.svg" class="w-10" />
+              <p class="ml-2 text-lg">YouTube</p>
+            </a>
           </div>
           <div class="z-50 flex items-center justify-center w-full mb-16">
             <img
